# one4all

./: .gitignore  CONTRIBUTING.md  README.md  contribution.md  readme.md
algorithms/: README.md
asynchronous/: nonthreaded.py  readme.md  tenthreaded.py  threaded.py  threadpoolexec.py
aws/: README.md
backend/: README.md  readme.md
backend/fastapi/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  readme.md  requirements.txt
backend/fastapi/app/: asgi.py
backend/fastapi/servers/: minimal.py
binarysearchtree/: Makefile  bst.c
binarytree/: Makefile
blind75/: README.md
bp-tree/: README.md
cicd/: README.md  readme.md
css/: README.md
databases/: README.md  readme.md
datastructures/: Makefile  README.md  list.c
design_patterns/: README.md
designpatterns/: README.md  readme.md
docker/: README.md
dynamicprogramming/: README.md  climbingstairs.py  fibonacci.py  minimize_energy.py
frontend/: README.md
git/: README.md  readme.md
githubactions/: README.md
go/: README.md
html/: README.md
java/: README.md
javascript/: README.md  readme.md
lang/: README.md
microservices/: README.md
misc/: misc1.py
next/: REAMDE.md  package.json
oops/: Abstraction.java  Encapsulation.java  Inheritance.java  Makefile  Overloading.java  Overriding.java  README.md  readme.md
python/: README.md
queue/: Makefile  README.md
react/: README.md
redux/: README.md
rust/: README.md
set/: README.md  set.py
solid/: DependencyInversion.java  ISP.java  Liskov.java  Makefile  NonISP.java  NonSRP.java  OpenClosed.java  README.md  SRP.java  (+1 more)
(+120 files in other folders)
